unpackaged/main/default/objects/tspa__TechSeeSessions__c/tspa__TechSeeSessions__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant-Session Invites</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Session Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>