unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Accepted_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>tspa__Accepted_By_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted By Agent</label>
    <type>Checkbox</type>
</CustomField>