unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__agentLink__c.field-meta.xml
<CustomField>
    <fullName>tspa__agentLink__c</fullName>
    <label>agentLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>