unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Case__c.field-meta.xml
<CustomField>
    <fullName>tspa__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Visual Remote Assistant-Session Invites</relationshipLabel>
    <relationshipName>Visual_Remote_Assistant_Session_Invites</relationshipName>
    <type>Lookup</type>
</CustomField>