unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>tspa__Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>