unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__CustomerDirectLink__c.field-meta.xml
<CustomField>
    <fullName>tspa__CustomerDirectLink__c</fullName>
    <label>CustomerDirectLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>