unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__DE_Channel__c.field-meta.xml
<CustomField>
    <fullName>tspa__DE_Channel__c</fullName>
    <label>DE Channel/Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>