unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Digital_Engagement__c.field-meta.xml
<CustomField>
    <fullName>tspa__Digital_Engagement__c</fullName>
    <label>Digital Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Messaging Channel</fullName>
            </value>
            <value>
                <fullName>ChatBot</fullName>
            </value>
            <value>
                <fullName>Custom Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>