unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Email__c.field-meta.xml
<CustomField>
    <fullName>tspa__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>