unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Error_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>tspa__Error_Message_Body__c</fullName>
    <label>Error Message Body</label>
    <length>254</length>
    <type>Text</type>
</CustomField>