unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Error_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>tspa__Error_Status_Code__c</fullName>
    <label>Error Status Code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>