unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__HasNoVisualHistory__c.field-meta.xml
<CustomField>
    <fullName>tspa__HasNoVisualHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasNoVisualHistory</label>
    <type>Checkbox</type>
</CustomField>