unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Initiated_from_vra_action__c.field-meta.xml
<CustomField>
    <fullName>tspa__Initiated_from_vra_action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiated from vra action</label>
    <type>Checkbox</type>
</CustomField>