unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Is_Scheduled_Meeting__c.field-meta.xml
<CustomField>
    <fullName>tspa__Is_Scheduled_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scheduled Meeting</label>
    <type>Checkbox</type>
</CustomField>