unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__isEndUserRequestSession__c.field-meta.xml
<CustomField>
    <fullName>tspa__isEndUserRequestSession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User Request Session</label>
    <type>Checkbox</type>
</CustomField>