unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__isPopout__c.field-meta.xml
<CustomField>
    <fullName>tspa__isPopout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPopout</label>
    <type>Checkbox</type>
</CustomField>