unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__isSanityTestRecord__c.field-meta.xml
<CustomField>
    <fullName>tspa__isSanityTestRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSanityTestRecord</label>
    <type>Checkbox</type>
</CustomField>