unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Language__c.field-meta.xml
<CustomField>
    <fullName>tspa__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>