unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Last_Notification_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>tspa__Last_Notification_Timestamp__c</fullName>
    <label>Last Notification Timestamp</label>
    <type>DateTime</type>
</CustomField>