unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Messaging_User_RecordID__c.field-meta.xml
<CustomField>
    <fullName>tspa__Messaging_User_RecordID__c</fullName>
    <label>Messaging User RecordID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>