unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Observer_Link__c.field-meta.xml
<CustomField>
    <fullName>tspa__Observer_Link__c</fullName>
    <label>Observer Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>