unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>tspa__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>