unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Receiver__c.field-meta.xml
<CustomField>
    <fullName>tspa__Receiver__c</fullName>
    <description>Storing ID of the receiver</description>
    <label>Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>