unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Screen_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Screen_Type__c</fullName>
    <label>Screen Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Share video</fullName>
            </value>
            <value>
                <fullName>View video</fullName>
            </value>
            <value>
                <fullName>Show video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>