unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__sendingMethod__c.field-meta.xml
<CustomField>
    <fullName>tspa__sendingMethod__c</fullName>
    <label>sendingMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>