unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__Sms_Delivered__c.field-meta.xml
<CustomField>
    <fullName>tspa__Sms_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sms Delivered</label>
    <type>Checkbox</type>
</CustomField>