unpackaged/main/default/objects/tspa__TechSeeSessions__c/fields/tspa__smsFlowTimeout__c.field-meta.xml
<CustomField>
    <fullName>tspa__smsFlowTimeout__c</fullName>
    <label>smsFlowTimeout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>